# check-sdist

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  codecov.yml
.github/workflows/: automerge.yml  cd.yml  ci.yml
docs/: conf.py
scripts/: generate_schema.py
src/check_sdist/: __init__.py  __main__.py  backends.py  git.py  inject.py  schema.py  sdist.py
src/check_sdist/_compat/: tomllib.py
src/check_sdist/backends/: __init__.py  _base.py  flit.py  hatchling.py  maturin.py  none.py  pdm.py  poetry.py  scikit_build_core.py  setuptools.py
src/check_sdist/resources/: __init__.py  check-sdist.schema.json  default-ignore.txt  junk-paths.txt
tests/: downstream.toml  test_backends.py  test_cli.py  test_downstream.py  test_inject.py  test_package.py  test_sdist.py  test_uv_isolation.py  test_validate_pyproject.py
