[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "check-sdist"
authors = [
  { name = "Henry Schreiner", email = "henryschreineriii@gmail.com" },
]
description = "Check the contents of an SDist vs. git"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "build >=1.2",
  "importlib-resources; python_version<'3.9'",
  "pathspec",
  "tomli; python_version<'3.11'",
]
keywords = ["sdist", "packaging", "lint"]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pyproject-hooks !=1.1.0",
  "validate-pyproject >=0.16",
]
uv = [
  "uv",
]

[project.urls]
Homepage = "https://github.com/henryiii/check-sdist"
"Bug Tracker" = "https://github.com/henryiii/check-sdist/issues"
Changelog = "https://github.com/henryiii/check-sdist/releases"

[project.scripts]
check-sdist = "check_sdist.__main__:main"

[project.entry-points."validate_pyproject.tool_schema"]
check-sdist = "check_sdist.schema:get_schema"

[tool.hatch]
version.path = "src/check_sdist/__init__.py"
envs.default.features = ["test"]
envs.hatch-test.features = ["test", "cli"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "check_sdist.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
ignore = [
  "PLR09",  # Design related pylint codes
  "E501",   # Line too long
  "ISC001", # Conflicts with formatter
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]


[tool.pylint]
py-version = "3.8"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
  "invalid-name",
]


[tool.repo-review]
ignore = ["PY004", "PC111", "RTD"]
